// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SupportForm /> Should render correctly 1`] = `
<div>
  <div
    class=""
  >
    <label
      class="forms__component forms__component__label"
      for="description_FORM_ID"
    >
      Description
    </label>
    <div
      class="sc-iBkjds hDuMmX forms__component forms__component__text-box"
      placeholder="Description"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-crXcEl dKPdSV"
        id="description_FORM_ID"
        name="Description"
        value=""
      />
      <svg
        class="sc-gKXOVf ktoyia sc-evZas bOUPru"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="forms__component forms__component__label"
      for="url_FORM_ID"
    >
      URL
    </label>
    <div
      class="sc-iBkjds hDuMmX forms__component forms__component__text-box"
      placeholder="URL"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-crXcEl dKPdSV"
        id="url_FORM_ID"
        name="URL"
        value=""
      />
      <svg
        class="sc-gKXOVf ktoyia sc-evZas bOUPru"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <button
      class="sc-dkzDqf kHuqxu forms__component forms__component__button"
      type="button"
    >
      <span
        class="sc-eCYdqJ ghZAyu"
      >
        Add link
      </span>
    </button>
  </div>
</div>
`;

exports[`<SupportForm /> Should render correctly with no link id 1`] = `
<div>
  <div
    class=""
  >
    <label
      class="forms__component forms__component__label"
      for="name_FORM_ID"
    >
      Name
    </label>
    <div
      class="sc-iBkjds hDuMmX forms__component forms__component__text-box"
      placeholder="Name"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-crXcEl dKPdSV"
        id="name_FORM_ID"
        name="Name"
        value=""
      />
      <svg
        class="sc-gKXOVf ktoyia sc-evZas bOUPru"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="forms__component forms__component__label"
      for="description_FORM_ID"
    >
      Description
    </label>
    <div
      class="sc-iBkjds hDuMmX forms__component forms__component__text-box"
      placeholder="Description"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-crXcEl dKPdSV"
        id="description_FORM_ID"
        name="Description"
        value=""
      />
      <svg
        class="sc-gKXOVf ktoyia sc-evZas bOUPru"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="forms__component forms__component__label"
      for="url_FORM_ID"
    >
      URL
    </label>
    <div
      class="sc-iBkjds hDuMmX forms__component forms__component__text-box"
      placeholder="URL"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-crXcEl dKPdSV"
        id="url_FORM_ID"
        name="URL"
        value=""
      />
      <svg
        class="sc-gKXOVf ktoyia sc-evZas bOUPru"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <button
      class="sc-dkzDqf kHuqxu forms__component forms__component__button"
      type="button"
    >
      <span
        class="sc-eCYdqJ ghZAyu"
      >
        Add link
      </span>
    </button>
  </div>
</div>
`;
